Fix issue with display of answers on iOS.

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ header button:hover {
     text-align: center;
 }
 
-.hide--answer {
+.sign--answer {
     padding-bottom: 3em;
 }
 
